--- a/index.html
+++ b/index.html
@@ -54,11 +54,20 @@
                 </div>
 
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <h4 class="parametro-senha-titulo">Força da senha</h4>
+                <div class="barra"></div>
+                <div class="forca fraca"></div>
+                <div class="parametro-senha-texto">
+                    <p>Fraca</p>
+                    <p>Média</p>
+                    <p>Forte</p>            
                 </div>
             </div>
         </div>
-    </section>
+    </div>             
+
+</section>
+<script src="main.js"></script>
 
 </body>
 
