--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="conteudo-senha">
             <label for="senha">Senha</label>
-            <input name="senha" type="text" id="campo-senha">
+            <input name="senha" type="text" id="campo-senha" readonly>
         </div>
         <div class="parametro">
             <h3 class="parametro-titulo">Personalize sua senha</h3>
@@ -32,43 +32,42 @@
                 </div>               
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Características da senha</h4>
-                <div class="parametro-senha-checkbox">
+                    <div class="parametro-senha-checkbox">
                     <input type="checkbox" name="maiuscula" class="checkbox" checked>
-                        <label for="maiuscula">Letras maiúsculas</label>
-                <div>
+                    <label for="maiuscula">Letras Maiúsculas</label>
+                    </div>
 
-                <div class="parametro-senha-checkbox">
-                    <input type="checkbox" name="numero" class="checkbox">
-                        <label for="minuscula">Letras minúsculas</label>
-                </div>
+                    <div class="parametro-senha-checkbox">
+                        <input type="checkbox" name="minuscula" class="checkbox">
+                    <label for="minuscula">Letras minúsculas</label>
+                    </div>
 
-                </div class="parametro-senha-checkbox">
-                    <input type="checkbox" name="numero" class="checkbox">
-                        <label for="numero">Números</label>
-                </div>
-                
-                <div class="parametro-senha-checkbox">
-                    <input type="checkbox" name="símbolos" class="checkbox">
+                    <div class="parametro-senha-checkbox">
+                        <input type="checkbox" name="numero" class="checkbox">
+                    <label for="numero">Números</label>
+                    </div>
+
+                    <div class="parametro-senha-checkbox">
+                        <input type="checkbox" name="simbolos" class="checkbox">
                         <label for="simbolos">Símbolos</label>
+                    </div>
                 </div>
-                </div>
-
+             
                 <div class="parametro-senha">
-                    <h4 class="parametro-senha-titulo">Força da senha</h4>
-                <div class="barra"></div>
-                <div class="forca fraca"></div>
-                <div class="parametro-senha-texto">
-                    <p>Fraca</p>
-                    <p>Média</p>
-                    <p>Forte</p>            
+                    <h4 class="parametro-senha__titulo">Força da senha</h4>
+                    <div class="barra"></div>
+                    <div class="forca fraca"></div>
+                    <div class="parametro-senha-texto">
+                        <p>Fraca</p>
+                        <p>Média</p>
+                        <p>Forte</p>
+                    </div>
                 </div>
             </div>
+            </div>
         </div>
-    </div>             
-
-</section>
-<script src="main.js"></script>
-
+    </section>
+    <script src="main.js"></script>
 </body>
 
 </html>
